calculator save embeddings

--- a/supervisely/calculator/debug.env
+++ b/supervisely/calculator/debug.env
@@ -5,6 +5,11 @@ context.teamId=250
 context.workspaceId=356
 context.deviceId='cuda'
 
+
+
+modal.state.downloadBatchSize=10
+modal.state.batchSize=10
+
 modal.state.slyEmbeddingsDir="/MetricLearningTasks/embeddings/"
 modal.state.slyFile="/MetricLearningTasks/checkpoints/config8.ckpt"
 modal.state.OnlyCurrentWorkspace=1
