--- a/supervisely/calculator/debug.env
+++ b/supervisely/calculator/debug.env
@@ -3,9 +3,7 @@ PYTHONUNBUFFERED=1
 TASK_ID=9640
 context.teamId=250
 context.workspaceId=356
-context.deviceId='cuda'
-
-
+context.deviceId='cuda:0'
 
 modal.state.downloadBatchSize=10
 modal.state.batchSize=10
