replace local cache path

--- a/supervisely/calculator/debug.env
+++ b/supervisely/calculator/debug.env
@@ -9,9 +9,11 @@ modal.state.downloadBatchSize=10
 modal.state.batchSize=10
 
 modal.state.slyEmbeddingsDir="/MetricLearningTasks/embeddings/"
-modal.state.slyFile="/MetricLearningTasks/checkpoints/config8.ckpt"
+modal.state.slyFile="/MetricLearningTasks/checkpoints/snacks_3.ckpt"
 modal.state.OnlyCurrentWorkspace=1
 
-DEBUG_APP_DIR="/app_debug_data"
-DEBUG_CACHE_DIR="/app_cache"
+#DEBUG_APP_DIR="/app_debug_data"
+#DEBUG_CACHE_DIR="/app_cache"
+DEBUG_APP_DIR="/home/work/PycharmProjects/app_debug_data"
+DEBUG_CACHE_DIR="/home/work/PycharmProjects/app_debug_cache"
 LOG_LEVEL="debug"
