--- a/supervisely/visualization/config.json
+++ b/supervisely/visualization/config.json
@@ -6,8 +6,8 @@
   ],
   "description": "",
   "docker_image": "supervisely/base-py-sdk:6.1.97",
-  "main_script": "src/sly_train.py",
-  "gui_template": "src/gui.html",
+  "main_script": "supervisely/visualization/src/sly_train.py",
+  "gui_template": "supervisely/visualization/src/gui.html",
   "task_location": "workspace_tasks",
   "need_gpu": true,
   "icon": "https://img.icons8.com/color/100/000000/tesseract.png",
