--- a/supervisely/serve/config.json
+++ b/supervisely/serve/config.json
@@ -6,8 +6,8 @@
   ],
   "description": "Deploy model as REST API service",
   "docker_image": "supervisely/base-py-sdk:6.1.97",
-  "main_script": "src/main.py",
-  "modal_template": "src/modal.html",
+  "main_script": "supervisely/serve/src/main.py",
+  "modal_template": "supervisely/serve/src/modal.html",
   "modal_width": 700,
   "modal_template_state": {
     "modelWeightsOptions": "pretrained",
