--- a/supervisely/serve/config.json
+++ b/supervisely/serve/config.json
@@ -4,7 +4,7 @@
   "categories": [
     "metric learning"
   ],
-  "description": "",
+  "description": "google landmarks challenge models",
   "docker_image": "supervisely/base-py-sdk:6.1.97",
   "main_script": "supervisely/serve/src/main.py",
   "modal_template": "supervisely/serve/src/modal.html",
