--- a/supervisely/serve/config.json
+++ b/supervisely/serve/config.json
@@ -5,7 +5,7 @@
     "metric learning"
   ],
   "description": "google landmarks challenge models",
-  "docker_image": "supervisely/base-py-sdk:6.1.97",
+  "docker_image": "supervisely/base-pytorch:6.0.22",
   "main_script": "supervisely/serve/src/main.py",
   "modal_template": "supervisely/serve/src/modal.html",
   "modal_width": 700,
