serve get_info && calculator init

--- a/supervisely/calculator/debug.env
+++ b/supervisely/calculator/debug.env
@@ -1,19 +1,13 @@
 PYTHONUNBUFFERED=1
 
-TASK_ID=9654
-context.teamId=250
-context.workspaceId=356
-context.deviceId='cuda:0'
+TASK_ID=10495
 
-modal.state.downloadBatchSize=32
-modal.state.batchSize=32
+context.teamId=255
+context.workspaceId=367
 
-modal.state.slyEmbeddingsDir="/MetricLearningTasks/embeddings/"
-modal.state.slyFile="/MetricLearningTasks/checkpoints/r2pk.ckpt"
-modal.state.OnlyCurrentWorkspace=1
+modal.state.sessionId=10568
 
-#DEBUG_APP_DIR="/app_debug_data"
-#DEBUG_CACHE_DIR="/app_cache"
-DEBUG_APP_DIR="/home/work/PycharmProjects/app_debug_data"
-DEBUG_CACHE_DIR="/home/work/PycharmProjects/app_debug_cache"
+DEBUG_APP_DIR="/Users/qanelph/Desktop/work/supervisely/app_debug_data"
+DEBUG_CACHE_DIR="/Users/qanelph/Desktop/work/supervisely/app_debug_cache"
+
 LOG_LEVEL="debug"
