calculator serialise left

--- a/supervisely/calculator/debug.env
+++ b/supervisely/calculator/debug.env
@@ -4,8 +4,9 @@ TASK_ID=10495
 
 context.teamId=255
 context.workspaceId=367
+context.projectId=7874
 
-modal.state.sessionId=10568
+modal.state.sessionId=10597
 
 DEBUG_APP_DIR="/Users/qanelph/Desktop/work/supervisely/app_debug_data"
 DEBUG_CACHE_DIR="/Users/qanelph/Desktop/work/supervisely/app_debug_cache"
