--- a/supervisely/calculator/config.json
+++ b/supervisely/calculator/config.json
@@ -17,12 +17,10 @@
         "size": "small"
     }
   },
-  "task_location": "application_sessions",
+  "task_location": "workspace_tasks",
   "icon": "https://imgur.com/a9u0M3Y.png",
   "icon_cover": true,
-  "isolate": true,
   "need_gpu": false,
-  "headless": true,
   "instance_version": "6.4.21",
   "context_menu": {
     "target": ["images_project"],
