--- a/supervisely/calculator/debug.env
+++ b/supervisely/calculator/debug.env
@@ -4,7 +4,7 @@ TASK_ID=10495
 
 context.teamId=255
 context.workspaceId=367
-context.projectId=7874
+modal.state.slyProjectId=7874
 
 modal.state.sessionId=10597
 
