--- a/supervisely/calculator/config.json
+++ b/supervisely/calculator/config.json
@@ -21,6 +21,7 @@
   "icon": "https://imgur.com/a9u0M3Y.png",
   "icon_cover": true,
   "need_gpu": false,
+  "headless": true,
   "instance_version": "6.4.21",
   "context_menu": {
     "target": ["images_project"],
