session tags in configs updated

--- a/supervisely/similarity-calculator/config.json
+++ b/supervisely/similarity-calculator/config.json
@@ -17,6 +17,6 @@
   "icon_cover": true,
   "instance_version": "6.4.21",
   "session_tags": [
-    "deployed_nn"
+    "deployed_nn_calculator"
   ]
 }
