--- a/supervisely/serve/config.json
+++ b/supervisely/serve/config.json
@@ -68,6 +68,6 @@
   "headless": true,
   "instance_version": "6.4.21",
   "session_tags": [
-    "deployed_nn"
+    "deployed_nn_embeddings"
   ]
 }
