embeddings calculator — config changed

--- a/supervisely/calculator/config.json
+++ b/supervisely/calculator/config.json
@@ -12,7 +12,7 @@
   "modal_template_state": {
     "sessionId": "None",
     "ssOptions": {
-        "sessionTags": ["deployed_nn"],
+        "sessionTags": ["deployed_nn_embeddings"],
         "showLabel": false,
         "size": "small"
     }
