--- a/supervisely/similarity-calculator/debug.env
+++ b/supervisely/similarity-calculator/debug.env
@@ -1,9 +1,11 @@
 PYTHONUNBUFFERED=1
 
-TASK_ID=10748
+TASK_ID=10843
 
 context.teamId=255
 context.workspaceId=367
+
+modal.state.slyProjectId=7874
 
 modal.state.device='cuda:0'
 
