--- a/supervisely/similarity-calculator/config.json
+++ b/supervisely/similarity-calculator/config.json
@@ -16,6 +16,11 @@
   "icon": "https://imgur.com/a9u0M3Y.png",
   "icon_cover": true,
   "instance_version": "6.4.21",
+
+  "context_menu": {
+    "target": ["images_project"],
+    "context_category": "Metric Learning"
+  },
   "session_tags": [
     "deployed_nn_recommendations"
   ]
