ai recommendations calculates mean

--- a/supervisely/similarity-calculator/debug.env
+++ b/supervisely/similarity-calculator/debug.env
@@ -5,7 +5,7 @@ TASK_ID=10843
 context.teamId=255
 context.workspaceId=367
 
-modal.state.slyProjectId=7874
+modal.state.slyProjectId=7984
 
 modal.state.device='cuda:0'
 
@@ -13,7 +13,7 @@ modal.state.weightsPath=''
 
 modal.state.batchSize=32
 modal.state.modelWeightsOptions="pretrained"
-modal.state.selectedModel="landmarks"
+modal.state.selectedModel="r2pk"
 
 
 
