--- a/supervisely/labeling-tool/config.json
+++ b/supervisely/labeling-tool/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "ML labeling tool",
+  "name": "ML Labeling Tool",
   "type": "app",
   "categories": [
     "labeling"
@@ -8,16 +8,23 @@
   "docker_image": "supervisely/base-py-sdk:6.1.102",
   "main_script": "src/main.py",
   "gui_template": "src/gui.html",
-
   "task_location": "application_sessions",
   "isolate": true,
   "headless": false,
-  "integrated_into": ["image_annotation_tool"],
-
+  "integrated_into": [
+    "image_annotation_tool"
+  ],
   "icon": "https://imgur.com/a9u0M3Y.png",
   "icon_background": "#FFFFFF",
   "hotkeys": [
-      {"hotkey": "ctrl+m", "command": "inference"}
+    {
+      "hotkey": "ctrl+n",
+      "command": "next_object"
+    },
+    {
+      "hotkey": "ctrl+p",
+      "command": "prev_object"
+    }
   ],
   "instance_version": "6.4.21"
 }
