--- a/supervisely/labeling-tool/config.json
+++ b/supervisely/labeling-tool/config.json
@@ -16,6 +16,7 @@
   ],
   "icon": "https://imgur.com/a9u0M3Y.png",
   "icon_background": "#FFFFFF",
+  "icon_cover": true,
   "hotkeys": [
     {
       "hotkey": "ctrl+n",
