--- a/supervisely/labeling-tool/config.json
+++ b/supervisely/labeling-tool/config.json
@@ -6,8 +6,8 @@
   ],
   "description": "use metric learning models to classify images",
   "docker_image": "supervisely/base-py-sdk:6.1.102",
-  "main_script": "src/main.py",
-  "gui_template": "src/gui.html",
+  "main_script": "supervisely/labeling-tool/src/main.py",
+  "gui_template": "supervisely/labeling-tool/src/gui.html",
   "task_location": "application_sessions",
   "isolate": true,
   "headless": false,
