--- a/supervisely/similarity-calculator/config.json
+++ b/supervisely/similarity-calculator/config.json
@@ -12,7 +12,7 @@
   "modal_template_state": {
     "modelWeightsOptions": "pretrained"
   },
-  "task_location": "workspace_tasks",
+  "task_location": "application_sessions",
   "icon": "https://imgur.com/a9u0M3Y.png",
   "icon_cover": true,
   "instance_version": "6.4.21",
