--- a/supervisely/calculator/config.json
+++ b/supervisely/calculator/config.json
@@ -4,7 +4,7 @@
   "categories": [
     "metric learning"
   ],
-  "description": "store embeddings in pickle files",
+  "description": "Calculate embeddings for images project",
   "docker_image": "supervisely/base-py-sdk:6.1.102",
   "main_script": "supervisely/calculator/src/main.py",
   "modal_template": "supervisely/calculator/src/modal.html",
@@ -18,8 +18,7 @@
     }
   },
   "task_location": "workspace_tasks",
-  "icon": "https://imgur.com/a9u0M3Y.png",
-  "icon_cover": true,
+  "icon": "https://i.imgur.com/FHHLYZQ.png",
   "need_gpu": false,
   "headless": true,
   "instance_version": "6.4.21",
