--- a/supervisely/serve/config.json
+++ b/supervisely/serve/config.json
@@ -11,41 +11,42 @@
   "modal_width": 700,
   "modal_template_state": {
     "modelWeightsOptions": "pretrained",
-    "selectedModel": "landmarks",
+    "selectedModel": "retail [medium]",
     "device": "cuda:0",
     "batchSize": 128,
     "weightsPath": "",
     "models": [
       {
         "config": "",
+        "weightsUrl": "https://github.com/supervisely-ecosystem/gl-metric-learning/releases/download/v0.0.1/r2pk_and_10k.ckpt",
+        "Model": "retail [medium]",
+        "Classes": "12075"
+      },
+      {
+        "config": "",
+        "weightsUrl": "https://github.com/supervisely-ecosystem/gl-metric-learning/releases/download/v0.0.1/r2pk.ckpt",
+        "Model": "retail [small]",
+        "Classes": "2384"
+      },
+      {
+        "config": "",
         "weightsUrl": "https://github.com/supervisely-ecosystem/gl-metric-learning/releases/download/v0.0.1/landmarks.ckpt",
-        "Model": "landmarks",
+        "Model": "landmarks [medium]",
         "Classes": "10752"
       },
       {
         "config": "",
         "weightsUrl": "https://github.com/supervisely-ecosystem/gl-metric-learning/releases/download/v0.0.1/pictures_v1.ckpt",
-        "Model": "pictures v1",
+        "Model": "pictures [nano]",
         "Classes": "83"
       },
       {
         "config": "",
         "weightsUrl": "https://github.com/supervisely-ecosystem/gl-metric-learning/releases/download/v0.0.1/snacks_v1.ckpt",
-        "Model": "snacks v1",
+        "Model": "retail [nano]",
         "Classes": "83"
       },
-      {
-        "config": "",
-        "weightsUrl": "https://github.com/supervisely-ecosystem/gl-metric-learning/releases/download/v0.0.1/r2pk.ckpt",
-        "Model": "rp2k",
-        "Classes": "2384"
-      },
-      {
-        "config": "",
-        "weightsUrl": "https://github.com/supervisely-ecosystem/gl-metric-learning/releases/download/v0.0.1/r2pk_and_10k.ckpt",
-        "Model": "rp2k and 10k",
-        "Classes": "12075"
-      }
+      
     ],
     "modelColumns": [
       {
