--- a/supervisely/similarity-calculator/config.json
+++ b/supervisely/similarity-calculator/config.json
@@ -14,6 +14,7 @@
   },
   "task_location": "application_sessions",
   "icon": "https://i.imgur.com/JiPxjlO.png",
+  "icon_background": "#FFFFFF",
   "instance_version": "6.4.21",
 
   "context_menu": {
