--- a/supervisely/serve/config.json
+++ b/supervisely/serve/config.json
@@ -12,7 +12,7 @@
   "modal_template_state": {
     "modelWeightsOptions": "pretrained",
     "selectedModel": "retail [medium]",
-    "device": "cuda:0",
+    "device": "cpu",
     "batchSize": 128,
     "weightsPath": "",
     "models": [
