--- a/supervisely/serve/config.json
+++ b/supervisely/serve/config.json
@@ -66,6 +66,7 @@
   "icon_background": "#FFFFFF",
   "isolate": true,
   "headless": true,
+  "need_gpu": false,
   "instance_version": "6.4.21",
   "session_tags": [
     "deployed_nn_embeddings"
