add sensitive update meta logging

--- a/supervisely/labeling-tool/debug.env
+++ b/supervisely/labeling-tool/debug.env
@@ -5,10 +5,12 @@ DEBUG_CACHE_DIR="/root/temp/app_debug_cache"
 
 LOG_LEVEL="debug"
 
-TASK_ID=13071
+TASK_ID=13111
 
 context.teamId=255
 context.workspaceId=367
 modal.state.slyProjectId=8425
 context.userId=283
+
+_SPAWN_USER_LOGIN=qanelph
 
