ai recommendations updated

--- a/supervisely/serve/config.json
+++ b/supervisely/serve/config.json
@@ -1,6 +1,7 @@
 {
   "name": "Serve Metric Learning",
   "type": "app",
+  "restart_policy": "on_error",
   "categories": [
     "metric learning"
   ],
