labels num updated

--- a/supervisely/similarity-calculator/debug.env
+++ b/supervisely/similarity-calculator/debug.env
@@ -1,13 +1,12 @@
 PYTHONUNBUFFERED=1
 
-TASK_ID=4702
+TASK_ID=14942
 
-context.teamId=1199
-context.workspaceId=1377
+context.teamId=255
+context.workspaceId=367
+modal.state.slyProjectId=10072
 
-modal.state.slyProjectId=2455
-
-modal.state.device='cuda:0'
+modal.state.device='cpu'
 
 modal.state.weightsPath=''
 
