--- a/supervisely/similarity-calculator/config.json
+++ b/supervisely/similarity-calculator/config.json
@@ -14,15 +14,16 @@
   },
   "task_location": "application_sessions",
   "icon": "https://i.imgur.com/JiPxjlO.png",
-
   "icon_background": "#FFFFFF",
   "instance_version": "6.4.21",
-
   "context_menu": {
-    "target": ["images_project"],
+    "target": [
+      "images_project"
+    ],
     "context_category": "Metric Learning"
   },
   "session_tags": [
     "deployed_nn_recommendations"
-  ]
+  ],
+  "poster": "https://i.imgur.com/ndhSKM8.jpg"
 }
