Set poster url in config.json

--- a/supervisely/labeling-tool/config.json
+++ b/supervisely/labeling-tool/config.json
@@ -27,5 +27,6 @@
       "command": "prev_object"
     }
   ],
-  "instance_version": "6.4.21"
+  "instance_version": "6.4.21",
+  "poster": "https://imgur.com/RdFfKO2.jpg"
 }
