--- a/supervisely/calculator/config.json
+++ b/supervisely/calculator/config.json
@@ -2,7 +2,10 @@
   "name": "Embeddings Calculator",
   "type": "app",
   "categories": [
-    "metric learning"
+    "neural network",
+    "images",
+    "metric learning",
+    "nn tools"
   ],
   "description": "Calculate embeddings for images project",
   "docker_image": "supervisely/base-py-sdk:6.1.102",
