--- a/supervisely/labeling-tool/config.json
+++ b/supervisely/labeling-tool/config.json
@@ -5,7 +5,8 @@
     "neural network",
     "images",
     "metric learning",
-    "inference interfaces"
+    "inference interfaces",
+    "labeling"
   ],
   "description": "Use metric learning models to classify images",
   "docker_image": "supervisely/base-py-sdk:6.1.102",
