--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ transformers==3.3.1
 scipy==1.5.2
 apex==0.9.10dev
 scikit_learn==0.23.2
-python-dotenv==0.19.0
-
-supervisely==6.1.97
+python-dotenv==0.19.2
+torch==1.11.0
+supervisely==6.23.1
+supervisely[apps]==6.23.1
