--- a/supervisely/visualization/config.json
+++ b/supervisely/visualization/config.json
@@ -16,5 +16,5 @@
   "need_gpu": true,
   "icon": "https://img.icons8.com/color/100/000000/tesseract.png",
   "icon_background": "#FFFFFF",
-  "icon_cover": true,
+  "icon_cover": true
 }
