Update categories in config.json

--- a/supervisely/visualization/config.json
+++ b/supervisely/visualization/config.json
@@ -16,5 +16,6 @@
   "need_gpu": true,
   "icon": "https://img.icons8.com/color/100/000000/tesseract.png",
   "icon_background": "#FFFFFF",
-  "icon_cover": true
+  "icon_cover": true,
+  "community_agent": false
 }
