Update categories in config.json

--- a/supervisely/calculator/config.json
+++ b/supervisely/calculator/config.json
@@ -34,5 +34,6 @@
     ],
     "context_category": "Metric Learning"
   },
-  "poster": "https://i.imgur.com/XLxFpq8.jpg"
+  "poster": "https://i.imgur.com/XLxFpq8.jpg",
+  "community_agent": false
 }
