Update categories in config.json

--- a/supervisely/similarity-calculator/config.json
+++ b/supervisely/similarity-calculator/config.json
@@ -28,5 +28,6 @@
   "session_tags": [
     "deployed_nn_recommendations"
   ],
-  "poster": "https://i.imgur.com/ndhSKM8.jpg"
+  "poster": "https://i.imgur.com/ndhSKM8.jpg",
+  "community_agent": false
 }
